cmake_minimum_required(VERSION 3.20)
project(sar_doppler_focuser VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "C++ Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")

if(MSVC)
    add_compile_options(/W4 /permissive- /Zc:__cplusplus /Zc:preprocessor)
    add_compile_definitions(NOMINMAX=1 _USE_MATH_DEFINES=1)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2 /GL")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
    set(CMAKE_STATIC_LINKER_FLAGS_RELEASE "${CMAKE_STATIC_LINKER_FLAGS_RELEASE} /LTCG")
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
    add_compile_options($<$<CONFIG:Release>:-O3 -march=native -flto>)
    add_link_options($<$<CONFIG:Release>:-flto>)
endif()

find_package(OpenMP REQUIRED)
if(OpenMP_CXX_FOUND)
    message(STATUS "OpenMP found: version ${OpenMP_CXX_VERSION}")
endif()

find_package(GDAL QUIET)
if(NOT GDAL_FOUND)
    find_package(PkgConfig QUIET)
    if(PkgConfig_FOUND)
        pkg_check_modules(GDAL QUIET gdal)
    endif()
endif()

if(GDAL_FOUND)
    message(STATUS "GDAL found: version ${GDAL_VERSION}")
else()
    message(WARNING "GDAL not found - GeoTIFF output will be disabled. Install GDAL for full functionality.")
    add_compile_definitions(SAR_NO_GDAL=1)
endif()

find_package(FFTW3 QUIET)
if(NOT FFTW3_FOUND)
    message(STATUS "FFTW3 not found, using built-in FFT implementation")
    add_compile_definitions(SAR_USE_BUILTIN_FFT=1)
else()
    message(STATUS "FFTW3 found")
endif()

set(SAR_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(SAR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE SAR_HEADERS ${SAR_INCLUDE_DIR}/sar/*.hpp)
file(GLOB_RECURSE SAR_SOURCES ${SAR_SOURCE_DIR}/*.cpp)

add_library(sar_focuser STATIC ${SAR_SOURCES} ${SAR_HEADERS})
target_include_directories(sar_focuser PUBLIC ${SAR_INCLUDE_DIR})
target_link_libraries(sar_focuser PUBLIC OpenMP::OpenMP_CXX)

if(GDAL_FOUND)
    target_include_directories(sar_focuser PUBLIC ${GDAL_INCLUDE_DIRS})
    target_link_libraries(sar_focuser PUBLIC ${GDAL_LIBRARIES})
endif()

if(FFTW3_FOUND)
    target_include_directories(sar_focuser PUBLIC ${FFTW3_INCLUDE_DIRS})
    target_link_libraries(sar_focuser PUBLIC ${FFTW3_LIBRARIES})
endif()

add_executable(sar_focus ${CMAKE_CURRENT_SOURCE_DIR}/apps/main.cpp)
target_link_libraries(sar_focus PRIVATE sar_focuser)

enable_testing()
add_subdirectory(tests)
